--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#03A9F4</color>
+    <color name="colorPrimaryDark">#0288D1</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorTextView">#96FF4081</color> <!-- Change as per colorPrimary -->
+    <color name="colorTextView">#96FF4081</color>
+
+    <color name="colorWhite">#FFFFFFFF</color>
 </resources>
