app: Solve big memory leak, implement _sketchy_ download function and a lot more
* Disclaimer activity to be opened on "click here" on wallpaper stuff
* Removed wallexample
* Lot of cruft still there, will do full review soon

--- a/app/src/main/res/layout/activity_wallpaper_stuff.xml
+++ b/app/src/main/res/layout/activity_wallpaper_stuff.xml
@@ -19,9 +19,7 @@
                 <ImageView
                     android:id="@+id/wallstuffimage"
                     android:layout_width="match_parent"
-                    android:layout_height="230dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/wallexample" />
+                    android:layout_height="230dp"/>
 
                 <android.support.design.widget.FloatingActionButton
                     android:layout_width="wrap_content"
