--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="colorText2">#747474</color>
 
     <color name="colorWhite">#FFFFFFFF</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
