app: Splash screen, disclaimer activity cleanup

--- a/app/src/main/res/layout/activity_disclaimer.xml
+++ b/app/src/main/res/layout/activity_disclaimer.xml
@@ -1,38 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="24dp"
-            android:text="@string/licence_text" />
+        android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:orientation="vertical">
 
-            <me.regalstreak.wallpapers.Button
-                android:id="@+id/email"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Email" />
 
             <me.regalstreak.wallpapers.TextView
-                android:id="@+id/tptextview"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:paddingBottom="10dp"
+                android:paddingTop="20dp"
+                android:text="@string/disclaimer"
+                android:textColor="@color/colorText1"
+                android:textSize="@dimen/big_text" />
+
+            <me.regalstreak.wallpapers.TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:text="@string/disc_text"
+                android:textSize="@dimen/small_text" />
+
+            <me.regalstreak.wallpapers.TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:paddingBottom="10dp"
+                android:paddingTop="20dp"
+                android:text="@string/takedown"
+                android:textColor="@color/colorText1"
+                android:textSize="@dimen/big_text" />
+
+            <me.regalstreak.wallpapers.TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="40dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:text="@string/takedown_text"
+                android:textSize="@dimen/small_text" />
+
 
         </LinearLayout>
 
-    </LinearLayout>
+
+    </ScrollView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/report_email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="16dp"
+        app:elevation="6dp"
+        android:src="@drawable/ic_email_white_24dp"
+        app:pressedTranslationZ="12dp"/>
+
 </RelativeLayout>
