--- a/app/src/main/res/layout/activity_wallpaper_stuff.xml
+++ b/app/src/main/res/layout/activity_wallpaper_stuff.xml
@@ -22,6 +22,7 @@
                     android:layout_height="230dp"/>
 
                 <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/wallstuffshare"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
